syntax = "proto3";

package portableSEAL;
option csharp_namespace = "portableSEAL.Services";

import "id.proto";
import "serialization.proto";

// @formatter:off
service Context {
    rpc Create (ContextParameters) returns (ContextId) {}
    rpc Restore (SerializedContext) returns (ContextId) {}
    rpc Export (Nothing) returns (SerializedContext) {}

    rpc Encrypt (EncryptionNecessity) returns (SerializedCiphertext) {}
    rpc Decrypt (DecryptionNecessity) returns (PlaintextData) {}

    rpc ParseCiphertext (SerializedCiphertext) returns (CiphertextId) {}

    rpc MakePlaintext (PlaintextData) returns (PlaintextId) {}

    rpc Destroy (Nothing) returns (Nothing) {}
    
    //
    
    rpc KeyGen (Nothing) returns (KeyPair) {}
}
// @formatter:on

message EncryptionNecessity {
    PlaintextId PlaintextId = 1;

    oneof PublicKey {
        KeyPairId PublicKeyId = 2;
        bytes PublicKeyBytes = 3;
    }
}

message DecryptionNecessity {
    CiphertextId CiphertextId = 1;

    oneof SecretKey {
        KeyPairId SecretKeyId = 2;
        bytes SecretKeyBytes = 3;
    }
}

message PlaintextData {
    sint64 data = 1;
}

message ContextParameters {
    repeated uint64 CoeffModulus = 2;
    uint64 PlainModulus = 3;
    uint64 PolyModulusDegree = 4;
}

message KeyPair {
    KeyPairId id = 1;

    bytes PublicKey = 2;
    bytes SecretKey = 3;
}

// @formatter:off
message Nothing {}